@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19449: in csv's writerow, handle non-string keys when generating the
+  error message that certain keys are not in the 'fieldnames' list.
+
 - Fix test.support.bind_port() to not cause an error when Python was compiled
   on a system with SO_REUSEPORT defined in the headers but run on a system
   with an OS kernel that does not support that reasonably new socket option.
